A3_11.output
Terminals unused in grammar

    TYPEDEF


Rules useless in parser due to conflicts

   16 unary_operator: '+'
   17               | '-'


State 29 conflicts: 10 shift/reduce
State 30 conflicts: 10 shift/reduce
State 141 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | STRING_LIT
    3                   | I_CONSTANT
    4                   | C_CONSTANT
    5                   | '(' expression ')'

    6 postfix_expression: primary_expression
    7                   | postfix_expression '[' expression ']'
    8                   | postfix_expression '(' argument_expression_list_opt ')'
    9                   | postfix_expression PTR_OP IDENTIFIER

   10 argument_expression_list_opt: ε
   11                             | argument_expression_list

   12 argument_expression_list: assignment_expression
   13                         | argument_expression_list ',' assignment_expression

   14 unary_operator: '&'
   15               | '*'
   16               | '+'
   17               | '-'
   18               | '!'

   19 unary_expression: postfix_expression
   20                 | '+' unary_expression
   21                 | '-' unary_expression
   22                 | unary_operator unary_expression

   23 multiplicative_expression: unary_expression
   24                          | multiplicative_expression '*' unary_expression
   25                          | multiplicative_expression '/' unary_expression
   26                          | multiplicative_expression '%' unary_expression

   27 additive_expression: multiplicative_expression
   28                    | additive_expression '+' multiplicative_expression
   29                    | additive_expression '-' multiplicative_expression

   30 relational_expression: additive_expression
   31                      | relational_expression '<' additive_expression
   32                      | relational_expression '>' additive_expression
   33                      | relational_expression LE_OP additive_expression
   34                      | relational_expression GE_OP additive_expression

   35 equality_expression: relational_expression
   36                    | equality_expression EQ_OP relational_expression
   37                    | equality_expression NE_OP relational_expression

   38 logical_AND_expression: equality_expression
   39                       | logical_AND_expression AND_OP equality_expression

   40 logical_OR_expression: logical_AND_expression
   41                      | logical_OR_expression OR_OP logical_AND_expression

   42 conditional_expression: logical_OR_expression
   43                       | logical_OR_expression '?' expression ':' conditional_expression

   44 assignment_expression: conditional_expression
   45                      | unary_expression '=' assignment_expression

   46 expression: assignment_expression

   47 declaration: type_specifier init_declarator ';'

   48 init_declarator: declarator
   49                | declarator '=' initializer

   50 type_specifier: VOID
   51               | CHAR
   52               | INT

   53 declarator: pointer_opt direct_declarator

   54 direct_declarator: IDENTIFIER
   55                  | IDENTIFIER '[' I_CONSTANT ']'
   56                  | IDENTIFIER '(' parameter_list_opt ')'

   57 pointer: '*'

   58 pointer_opt: ε
   59            | pointer

   60 parameter_list: parameter_declaration
   61               | parameter_list ',' parameter_declaration

   62 parameter_list_opt: ε
   63                   | parameter_list

   64 parameter_declaration: type_specifier pointer_opt identifier_opt

   65 identifier_opt: ε
   66               | IDENTIFIER

   67 initializer: assignment_expression

   68 statement: compound_statement
   69          | expression_statement
   70          | selection_statement
   71          | iteration_statement
   72          | jump_statement

   73 compound_statement: '{' block_item_list_opt '}'

   74 block_item_list_opt: ε
   75                    | block_item_list

   76 block_item_list: block_item
   77                | block_item_list block_item

   78 block_item: declaration
   79           | statement

   80 expression_statement: expressionopt ';'

   81 selection_statement: IF '(' expression ')' statement
   82                    | IF '(' expression ')' statement ELSE statement

   83 expressionopt: ε
   84              | expression

   85 iteration_statement: FOR '(' expressionopt ';' expressionopt ';' expressionopt ')' statement

   86 jump_statement: RETURN expressionopt ';'

   87 translation_unit: function_definition
   88                 | declaration

   89 function_definition: type_specifier declarator declaration_list_opt compound_statement

   90 declaration_list: declaration
   91                 | declaration_list declaration

   92 declaration_list_opt: ε
   93                     | declaration_list


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 18
    '%' (37) 26
    '&' (38) 14
    '(' (40) 5 8 56 81 82 85
    ')' (41) 5 8 56 81 82 85
    '*' (42) 15 24 57
    '+' (43) 16 20 28
    ',' (44) 13 61
    '-' (45) 17 21 29
    '/' (47) 25
    ':' (58) 43
    ';' (59) 47 80 85 86
    '<' (60) 31
    '=' (61) 45 49
    '>' (62) 32
    '?' (63) 43
    '[' (91) 7 55
    ']' (93) 7 55
    '{' (123) 73
    '}' (125) 73
    error (256)
    CHAR (258) 51
    ELSE (259) 82
    FOR (260) 85
    IF (261) 81 82
    INT (262) 52
    RETURN (263) 86
    VOID (264) 50
    TYPEDEF (265)
    IDENTIFIER <symp> (266) 1 9 54 55 56 66
    STRING_LIT (267) 2
    C_CONSTANT (268) 4
    I_CONSTANT <symp> (269) 3 55
    AND_OP (270) 39
    PTR_OP (271) 9
    OR_OP (272) 41
    LE_OP (273) 33
    GE_OP (274) 34
    EQ_OP (275) 36
    NE_OP (276) 37


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    primary_expression <symp> (43)
        on left: 1 2 3 4 5
        on right: 6
    postfix_expression <symp> (44)
        on left: 6 7 8 9
        on right: 7 8 9 19
    argument_expression_list_opt (45)
        on left: 10 11
        on right: 8
    argument_expression_list (46)
        on left: 12 13
        on right: 11 13
    unary_operator (47)
        on left: 14 15 16 17 18
        on right: 22
    unary_expression <symp> (48)
        on left: 19 20 21 22
        on right: 20 21 22 23 24 25 26 45
    multiplicative_expression <symp> (49)
        on left: 23 24 25 26
        on right: 24 25 26 27 28 29
    additive_expression <symp> (50)
        on left: 27 28 29
        on right: 28 29 30 31 32 33 34
    relational_expression (51)
        on left: 30 31 32 33 34
        on right: 31 32 33 34 35 36 37
    equality_expression (52)
        on left: 35 36 37
        on right: 36 37 38 39
    logical_AND_expression (53)
        on left: 38 39
        on right: 39 40 41
    logical_OR_expression (54)
        on left: 40 41
        on right: 41 42 43
    conditional_expression (55)
        on left: 42 43
        on right: 43 44
    assignment_expression (56)
        on left: 44 45
        on right: 12 13 45 46 67
    expression (57)
        on left: 46
        on right: 5 7 43 81 82 84
    declaration (58)
        on left: 47
        on right: 78 88 90 91
    init_declarator (59)
        on left: 48 49
        on right: 47
    type_specifier (60)
        on left: 50 51 52
        on right: 47 64 89
    declarator (61)
        on left: 53
        on right: 48 49 89
    direct_declarator (62)
        on left: 54 55 56
        on right: 53
    pointer (63)
        on left: 57
        on right: 59
    pointer_opt (64)
        on left: 58 59
        on right: 53 64
    parameter_list (65)
        on left: 60 61
        on right: 61 63
    parameter_list_opt (66)
        on left: 62 63
        on right: 56
    parameter_declaration (67)
        on left: 64
        on right: 60 61
    identifier_opt (68)
        on left: 65 66
        on right: 64
    initializer (69)
        on left: 67
        on right: 49
    statement (70)
        on left: 68 69 70 71 72
        on right: 79 81 82 85
    compound_statement (71)
        on left: 73
        on right: 68 89
    block_item_list_opt (72)
        on left: 74 75
        on right: 73
    block_item_list (73)
        on left: 76 77
        on right: 75 77
    block_item (74)
        on left: 78 79
        on right: 76 77
    expression_statement (75)
        on left: 80
        on right: 69
    selection_statement (76)
        on left: 81 82
        on right: 70
    expressionopt (77)
        on left: 83 84
        on right: 80 85 86
    iteration_statement (78)
        on left: 85
        on right: 71
    jump_statement (79)
        on left: 86
        on right: 72
    translation_unit (80)
        on left: 87 88
        on right: 0
    function_definition (81)
        on left: 89
        on right: 87
    declaration_list (82)
        on left: 90 91
        on right: 91 93
    declaration_list_opt (83)
        on left: 92 93
        on right: 89


State 0

    0 $accept: • translation_unit $end

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    declaration          go to state 4
    type_specifier       go to state 5
    translation_unit     go to state 6
    function_definition  go to state 7


State 1

   51 type_specifier: CHAR •

    $default  reduce using rule 51 (type_specifier)


State 2

   52 type_specifier: INT •

    $default  reduce using rule 52 (type_specifier)


State 3

   50 type_specifier: VOID •

    $default  reduce using rule 50 (type_specifier)


State 4

   88 translation_unit: declaration •

    $default  reduce using rule 88 (translation_unit)


State 5

   47 declaration: type_specifier • init_declarator ';'
   89 function_definition: type_specifier • declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 8

    $default  reduce using rule 58 (pointer_opt)

    init_declarator  go to state 9
    declarator       go to state 10
    pointer          go to state 11
    pointer_opt      go to state 12


State 6

    0 $accept: translation_unit • $end

    $end  shift, and go to state 13


State 7

   87 translation_unit: function_definition •

    $default  reduce using rule 87 (translation_unit)


State 8

   57 pointer: '*' •

    $default  reduce using rule 57 (pointer)


State 9

   47 declaration: type_specifier init_declarator • ';'

    ';'  shift, and go to state 14


State 10

   48 init_declarator: declarator •
   49                | declarator • '=' initializer
   89 function_definition: type_specifier declarator • declaration_list_opt compound_statement

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3
    '='   shift, and go to state 15

    '{'       reduce using rule 92 (declaration_list_opt)
    $default  reduce using rule 48 (init_declarator)

    declaration           go to state 16
    type_specifier        go to state 17
    declaration_list      go to state 18
    declaration_list_opt  go to state 19


State 11

   59 pointer_opt: pointer •

    $default  reduce using rule 59 (pointer_opt)


State 12

   53 declarator: pointer_opt • direct_declarator

    IDENTIFIER  shift, and go to state 20

    direct_declarator  go to state 21


State 13

    0 $accept: translation_unit $end •

    $default  accept


State 14

   47 declaration: type_specifier init_declarator ';' •

    $default  reduce using rule 47 (declaration)


State 15

   49 init_declarator: declarator '=' • initializer

    IDENTIFIER  shift, and go to state 22
    STRING_LIT  shift, and go to state 23
    C_CONSTANT  shift, and go to state 24
    I_CONSTANT  shift, and go to state 25
    '('         shift, and go to state 26
    '&'         shift, and go to state 27
    '*'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '!'         shift, and go to state 31

    primary_expression         go to state 32
    postfix_expression         go to state 33
    unary_operator             go to state 34
    unary_expression           go to state 35
    multiplicative_expression  go to state 36
    additive_expression        go to state 37
    relational_expression      go to state 38
    equality_expression        go to state 39
    logical_AND_expression     go to state 40
    logical_OR_expression      go to state 41
    conditional_expression     go to state 42
    assignment_expression      go to state 43
    initializer                go to state 44


State 16

   90 declaration_list: declaration •

    $default  reduce using rule 90 (declaration_list)


State 17

   47 declaration: type_specifier • init_declarator ';'

    '*'  shift, and go to state 8

    $default  reduce using rule 58 (pointer_opt)

    init_declarator  go to state 9
    declarator       go to state 45
    pointer          go to state 11
    pointer_opt      go to state 12


State 18

   91 declaration_list: declaration_list • declaration
   93 declaration_list_opt: declaration_list •

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 93 (declaration_list_opt)

    declaration     go to state 46
    type_specifier  go to state 17


State 19

   89 function_definition: type_specifier declarator declaration_list_opt • compound_statement

    '{'  shift, and go to state 47

    compound_statement  go to state 48


State 20

   54 direct_declarator: IDENTIFIER •
   55                  | IDENTIFIER • '[' I_CONSTANT ']'
   56                  | IDENTIFIER • '(' parameter_list_opt ')'

    '('  shift, and go to state 49
    '['  shift, and go to state 50

    $default  reduce using rule 54 (direct_declarator)


State 21

   53 declarator: pointer_opt direct_declarator •

    $default  reduce using rule 53 (declarator)


State 22

    1 primary_expression: IDENTIFIER •

    $default  reduce using rule 1 (primary_expression)


State 23

    2 primary_expression: STRING_LIT •

    $default  reduce using rule 2 (primary_expression)


State 24

    4 primary_expression: C_CONSTANT •

    $default  reduce using rule 4 (primary_expression)


State 25

    3 primary_expression: I_CONSTANT •

    $default  reduce using rule 3 (primary_expression)


State 26

    5 primary_expression: '(' • expression ')'

    IDENTIFIER  shift, and go to state 22
    STRING_LIT  shift, and go to state 23
    C_CONSTANT  shift, and go to state 24
    I_CONSTANT  shift, and go to state 25
    '('         shift, and go to state 26
    '&'         shift, and go to state 27
    '*'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '!'         shift, and go to state 31

    primary_expression         go to state 32
    postfix_expression         go to state 33
    unary_operator             go to state 34
    unary_expression           go to state 35
    multiplicative_expression  go to state 36
    additive_expression        go to state 37
    relational_expression      go to state 38
    equality_expression        go to state 39
    logical_AND_expression     go to state 40
    logical_OR_expression      go to state 41
    conditional_expression     go to state 42
    assignment_expression      go to state 51
    expression                 go to state 52


State 27

   14 unary_operator: '&' •

    $default  reduce using rule 14 (unary_operator)


State 28

   15 unary_operator: '*' •

    $default  reduce using rule 15 (unary_operator)


State 29

   16 unary_operator: '+' •
   20 unary_expression: '+' • unary_expression

    IDENTIFIER  shift, and go to state 22
    STRING_LIT  shift, and go to state 23
    C_CONSTANT  shift, and go to state 24
    I_CONSTANT  shift, and go to state 25
    '('         shift, and go to state 26
    '&'         shift, and go to state 27
    '*'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '!'         shift, and go to state 31

    IDENTIFIER  [reduce using rule 16 (unary_operator)]
    STRING_LIT  [reduce using rule 16 (unary_operator)]
    C_CONSTANT  [reduce using rule 16 (unary_operator)]
    I_CONSTANT  [reduce using rule 16 (unary_operator)]
    '('         [reduce using rule 16 (unary_operator)]
    '&'         [reduce using rule 16 (unary_operator)]
    '*'         [reduce using rule 16 (unary_operator)]
    '+'         [reduce using rule 16 (unary_operator)]
    '-'         [reduce using rule 16 (unary_operator)]
    '!'         [reduce using rule 16 (unary_operator)]

    primary_expression  go to state 32
    postfix_expression  go to state 33
    unary_operator      go to state 34
    unary_expression    go to state 53


State 30

   17 unary_operator: '-' •
   21 unary_expression: '-' • unary_expression

    IDENTIFIER  shift, and go to state 22
    STRING_LIT  shift, and go to state 23
    C_CONSTANT  shift, and go to state 24
    I_CONSTANT  shift, and go to state 25
    '('         shift, and go to state 26
    '&'         shift, and go to state 27
    '*'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '!'         shift, and go to state 31

    IDENTIFIER  [reduce using rule 17 (unary_operator)]
    STRING_LIT  [reduce using rule 17 (unary_operator)]
    C_CONSTANT  [reduce using rule 17 (unary_operator)]
    I_CONSTANT  [reduce using rule 17 (unary_operator)]
    '('         [reduce using rule 17 (unary_operator)]
    '&'         [reduce using rule 17 (unary_operator)]
    '*'         [reduce using rule 17 (unary_operator)]
    '+'         [reduce using rule 17 (unary_operator)]
    '-'         [reduce using rule 17 (unary_operator)]
    '!'         [reduce using rule 17 (unary_operator)]

    primary_expression  go to state 32
    postfix_expression  go to state 33
    unary_operator      go to state 34
    unary_expression    go to state 54


State 31

   18 unary_operator: '!' •

    $default  reduce using rule 18 (unary_operator)


State 32

    6 postfix_expression: primary_expression •

    $default  reduce using rule 6 (postfix_expression)


State 33

    7 postfix_expression: postfix_expression • '[' expression ']'
    8                   | postfix_expression • '(' argument_expression_list_opt ')'
    9                   | postfix_expression • PTR_OP IDENTIFIER
   19 unary_expression: postfix_expression •

    PTR_OP  shift, and go to state 55
    '('     shift, and go to state 56
    '['     shift, and go to state 57

    $default  reduce using rule 19 (unary_expression)


State 34

   22 unary_expression: unary_operator • unary_expression

    IDENTIFIER  shift, and go to state 22
    STRING_LIT  shift, and go to state 23
    C_CONSTANT  shift, and go to state 24
    I_CONSTANT  shift, and go to state 25
    '('         shift, and go to state 26
    '&'         shift, and go to state 27
    '*'         shift, and go to state 28
    '+'         shift, and go to state 29
    '-'         shift, and go to state 30
    '!'         shift, and go to state 31

    primary_expression  go to state 32
    postfix_expression  go to state 33
    unary_operator      go to state 34
    unary_expression    go to state 58


State 35

   23 multiplicative_expression: unary_expression •
   45 assignment_expression: unary_expression • '=' assignment_expression

    '='  shift, and go to state 59

    $default  reduce using rule 23 (multiplicative_expression)


State 36

   24 multiplicative_expression: multiplicative_expression • '*' unary_expression
   25                          | multiplicative_expression • '/' unary_expression
   26                          | multiplicative_expression • '%' unary_expression
   27 additive_expression: multiplicative_expression •

    '*'  shift, and go to state 60
    '/'  shift, and go to state 61
    '%'  shift, and go to state 62

    $default  reduce using rule 27 (additive_expression)


State 37

   28 additive_expression: additive_expression • '+' multiplicative_expression
   29                    | additive_expression • '-' multiplicative_expression
   30 relational_expression: additive_expression •

    '+'  shift, and go to state 63
    '-'  shift, and go to state 64

    $default  reduce using rule 30 (relational_expression)


State 38

   31 relational_expression: relational_expression • '<' additive_expression
   32                      | relational_expression • '>' additive_expression
   33                      | relational_expression • LE_OP additive_expression
   34                      | relational_expression • GE_OP additive_expression
   35 equality_expression: relational_expression •

    LE_OP  shift, and go to state 65
    GE_OP  shift, and go to state 66
    '<'    shift, and go to state 67
    '>'    shift, and go to state 68

    $default  reduce using rule 35 (equality_expression)


State 39

   36 equality_expression: equality_expression • EQ_OP relational_expression
   37                    | equality_expression • NE_OP relational_expression
   38 logical_AND_expression: equality_expression •

    EQ_OP  shift, and go to state 69
    NE_OP  shift, and go to state 70

    $default  reduce using rule 38 (logical_AND_expression)


State 40

   39 logical_AND_expression: logical_AND_expression • AND_OP equality_expression
   40 logical_OR_expression: logical_AND_expression •

    AND_OP  shift, and go to state 71

    $default  reduce using rule 40 (logical_OR_expression)


State 41

   41 logical_OR_expression: logical_OR_expression • OR_OP logical_AND_expression
   42 conditional_expression: logical_OR_expression •
   43                       | logical_OR_expression • '?' expression ':' conditional_expression

    OR_OP  shift, and go to state 72
    '?'    shift, and go to state 73

    $default  reduce using rule 42 (conditional_expression)


State 42

   44 assignment_expression: conditional_expression •

    $default  reduce using rule 44 (assignment_expression)


State 43

   67 initializer: assignment_expression •

    $default  reduce using rule 67 (initializer)


State 44

   49 init_declarator: declarator '=' initializer •

    $default  reduce using rule 49 (init_declarator)


State 45

   48 init_declarator: declarator •
   49                | declarator • '=' initializer

    '='  shift, and go to state 15

    $default  reduce using rule 48 (init_declarator)


State 46

   91 declaration_list: declaration_list declaration •

    $default  reduce using rule 91 (declaration_list)


State 47

   73 compound_statement: '{' • block_item_list_opt '}'
